[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flamingo-tangos"
authors = [{name = "Andrew Pontzen", email = "andrew.p.pontzen@durham.ac.uk"}]
description = "Flamingo-specific property modules for tangos"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "tangos",
    "pynbody",
]

dynamic = ["version"]

[project.entry-points."tangos.property_modules"]
flamingo = "flamingo_tangos"

[project.urls]
Home = "https://github.com/apontzen/flamingo-tangos"

[tool.flit.module]
name = "flamingo_tangos"